# diy-router

./: .gdbinit  Cargo.toml  README.md  gdb.sh  memory.x  project.ncl
.cargo/: config.toml
macros/src/: lib.rs
router/: Cargo.toml
router/src/: enc28j60.rs  main.rs
src/: main.rs
