[package]
name = "diy-router"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "diy-router"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
panic-halt = "1"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f407"] }
